fixed bug on safari

--- a/style.scss
+++ b/style.scss
@@ -90,7 +90,7 @@ overflow-x: hidden;
             cursor: default;
             max-width: fit-content;
             border-radius: 10px;
-            font-size: 1.4rem;
+            font-size: 1.6rem;
             transition: 0.3s;
             &:active {
                 background-color: #fff;
